[package]
name = "packed_array"
version = "0.2.0"
license = "MIT"
description = "Packed Array aka sparse set structure with compile-time known size"
edition = "2021"
repository = "https://github.com/TheBlek/packed_array"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.0.0"
